--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.11
         architecture: x64
     - name: Install dependencies
       run: python -m pip install -r requirements.txt
@@ -24,7 +24,7 @@ jobs:
     - name: Commit and push if changed
       run: |-
         git diff
-        git config --global user.email "akhilsahu.dev@gmail.com"
+        git config --global user.email "actions@users.noreply.github.com"
         git config --global user.name "README-bot"
         git add -A
         git commit -m "Updated content" || exit 0
